--- a/jquery/objArrayform.html
+++ b/jquery/objArrayform.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Form suing Array of Objects</title>
-
+    <title>Array of Objects Ex</title>
+    <link rel="stylesheet" href="..\w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-</br>
+    </br>
     <div class="container-fluid">
         <div class="jumbotron">
             <h1>Array Of Objects Example</h1>
@@ -25,7 +27,7 @@
                 <div class="form-group">
                     <label for="roll_no">Roll No:</label>
                     <input type="number" name="roll_no" id="roll_no" class="form-control">
-                </div>  
+                </div>
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" name="name" id="name" class="form-control">
@@ -38,41 +40,71 @@
                     <label for="class">Class:</label>
                     <input type="text" name="class" id="class" class="form-control">
                 </div>
-
                 <button type="button" id="btn-submit" class="btn btn-primary">Submit</button>
+            </div>
+            <div class="col-lg-8">
+                <table class="table table-stripped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Roll No</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Class</th>
+                        </tr>
+                    </thead>
+                    <tbody id="std_data">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 
     <script>
-    $(document).ready(function(){
-        // alert("hello");
-        var stds = [];
-        $("#btn-submit").click(function(){
+        $(document).ready(function () {
             // alert("hello");
-            var roll_no = $("#roll_no").val();
-            var name = $("#name").val();
-            var email = $("#email").val();
-            var clss = $("#class").val();
+            var stds = [];
+            $("#btn-submit").click(function () {
+                // alert("hello");
+                var roll_no = $("#roll_no").val();
+                var name = $("#name").val();
+                var email = $("#email").val();
+                var clss = $("#class").val();
 
-            var std = {};
-            std.rollNo = roll_no;
-            std.name = name;
-            std.email = email;
-            std.clss = clss;
+                var std = {};
+                std.rollNo = roll_no;
+                std.name = name;
+                std.email = email;
+                std.clss = clss;
 
-            stds.push(std);
+                stds.push(std);
 
-            $("#roll_no").val("");
-            $("#name").val("");
-            $("#email").val("");
-            $("#class").val("");
+                $("#roll_no").val("");
+                $("#name").val("");
+                $("#email").val("");
+                $("#class").val("");
 
-            console.log(stds);
+                // console.log(stds);
+
+                var tdata = "";
+                for (var i = 0; i < stds.length; i++) {
+                    console.log(stds);
+
+                    
+                    var trow = "<tr class =\" w3-indigo\"><td><b>"
+                         + stds[i].rollNo +
+                        "</b></td><td><b>" + stds[i].name +
+                        "</b></td><td><b>" + stds[i].email +
+                        "</b></td><td><b>" + stds[i].clss +
+                        "</b></td></tr>";
+                    tdata = tdata + trow;
+                }
+
+                $("#std_data").html(tdata);
+            });
         });
-    });
 
     </script>
-    
+
 </body>
+
 </html>
