--- a/bs4snip.html
+++ b/bs4snip.html
@@ -38,7 +38,7 @@
         </script>
     </body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1bbd06;">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -63,9 +63,21 @@
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-        </div>
-    </nav>
 
+
+        </div>
+
+    </nav>
+    <div class="form-group">
+      <label for=""></label>
+      <input type="file" class="form-control-file" name="" id="" placeholder="" aria-describedby="fileHelpId">
+      <small id="fileHelpId" class="form-text text-muted">Help text</small>
+    </div>
+    <div class="form-group">
+      <label for="">Emal: </label>
+      <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId" placeholder="">
+      <small id="emailHelpId" class="form-text text-muted">Enter your Email here</small>
+    </div>
     </html>
 </body>
 
