--- a/index.html
+++ b/index.html
@@ -1,19 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+     <title>Title</title>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 
+       
+     <!-- Optional JavaScript -->
+     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   
 </head>
+
 <body>
 
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p> 
-</div>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs justify-content-end bg-dark navbar-dark" id="navId">
+    <li class="nav-item ">
+      <a href="#tab1Id" class="nav-link active">Home</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+        aria-expanded="false">Folders</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="./jquery/index/index.html">JQUERY</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="./HTML/index/index.html">HTML</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="./php/index/index.html">PHP</a>
+
+      </div>
+    <!-- </li>
+    <li class="nav-item">
+      <a href="#tab5Id" class="nav-link">Another link</a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link disabled">Disabled</a>
+    </li> -->
+  </ul>
+
+
+
+  <script>
+    $('#navId a').click(e => {
+      // e.preventDefault();
+      $(this).tab('show');
+    });
+  </script>
+
+
+
+
+  <div class="container">
+    <h1>My Main Server Page</h1>
+    <p>From Here you can access all files I created while learning Web Development</p>
+  </div>
 
 </body>
+
 </html>
