--- a/Bootstrap tutorial 1/index.html
+++ b/Bootstrap tutorial 1/index.html
@@ -35,9 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-
-
-
+            </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse-main">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="active" href="#">Home</a></li>
@@ -46,7 +44,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </nav>
 
